# Dark-Souls-III-Archipelago-client

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build-release.yml
archipelago-client/: CMakeLists.txt
archipelago-interface/: CMakeLists.txt
archipelago-interface/inc/: ArchipelagoInterface.h  Core.h  GameHook.h
archipelago-interface/src/: AutoEquip.cpp  Core.cpp  GameHook.cpp  _AutoEquip.asm  dinput8.cpp  dinput8_asm.asm
subprojects/apclientpp/: CMakeLists.txt
subprojects/wswrap/: CMakeLists.txt
